--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^1.2.5",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/drawer": "^6.7.0",
     "@react-navigation/native": "^6.0.2",
@@ -23,6 +24,7 @@
     "expo-font": "~12.0.7",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.17",
+    "expo-secure-store": "^13.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -34,6 +36,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
