--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@clerk/clerk-expo": "^1.2.5",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/netinfo": "^11.3.2",
     "@react-navigation/drawer": "^6.7.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.18",
@@ -37,7 +38,11 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "expo-battery": "~8.0.1",
+    "expo-notifications": "~0.28.10",
+    "expo-av": "~14.0.6",
+    "expo-image-picker": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
