--- a/package.json
+++ b/package.json
@@ -21,34 +21,42 @@
     "@react-navigation/drawer": "^6.7.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.18",
+    "expo-av": "~14.0.6",
+    "expo-battery": "~8.0.1",
     "expo-constants": "~16.0.2",
+    "expo-contacts": "~13.0.5",
     "expo-font": "~12.0.7",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
+    "expo-notifications": "~0.28.10",
     "expo-router": "~3.5.17",
     "expo-secure-store": "^13.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "i18next": "^23.12.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^15.0.0",
     "react-native": "0.74.3",
+    "react-native-contacts": "^7.0.8",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.10",
-    "expo-battery": "~8.0.1",
-    "expo-notifications": "~0.28.10",
-    "expo-av": "~14.0.6",
-    "expo-image-picker": "~15.0.7"
+    "styled-components": "^6.1.12",
+    "expo-localization": "~15.0.3",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "@types/styled-components-react-native": "^5.2.5",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
